--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/router": "^14.2.0",
     "@ngxs/storage-plugin": "^3.7.6",
     "@ngxs/store": "^3.7.6",
+    "chart.js": "^3.6.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "ng2-charts": "^4.1.1",
     "ngxs-reset-plugin": "^3.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
