--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "publish": "ng build --configuration production"
+    "publish": "ng build --base-href ./docs --configuration production"
   },
   "private": true,
   "dependencies": {
